--- a/typing_an_express_app/package.json
+++ b/typing_an_express_app/package.json
@@ -21,6 +21,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/uuid": "^9.0.0",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   }
 }
